# IOT3

./: .replit  db.sqlite3  main.sh  manage.py  migrate.sh  pyproject.toml
.ebextensions/: django.config
IOT3/: asgi.py  settings.py  urls.py  wsgi.py
IOT3/static/icons/: site.json  site.webmanifest
api/: urls.py  views.py
eb-django/: pyvenv.cfg
eb-django/Scripts/: activate  activate.bat  django-admin.py
main/: urls.py  views.py
main/templates/: base.html  login.html  thing.html  things.html
main/templates/err/: 400.html  403.html  404.html  500.html
models/: admin.py  models.py
models/migrations/: 0001_initial.py
