[tool.poetry]
name = "repl_python3_IOT3"
version = "0.1.0"
description = ""
authors = ["HarshaAddanki <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.5"
lxml = "^4.6.3"
cryptography = "^3.4.7"
mysqlclient = "^2.0.3"
Cython = "^0.29.24"
lockfile = "^0.12.2"
ipaddr = "^2.2.0"
python-memcached = "^1.59"
cx-Oracle = "^8.2.1"
selenium = "^3.141.0"
ordereddict = "^1.1"
Brotli = "^1.0.9"
HTMLParser = "^0.0.2"
importlib-metadata = "^4.6.1"
wincertstore = "^0.2.1"
pymemcache = "^3.5.0"
python-ntlm = "^1.1.0"
docutils = "^0.17.1"
keyring = "^23.0.1"
sets = "^0.3.2"
mypy-extensions = "^0.4.3"
pywatchman = "^1.4.1"
typing-extensions = "^3.10.0"
pylibmc = "^1.6.1"
psycopg2 = "^2.9.1"
zipp = "^3.5.0"
ipython = "^7.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
